--- a/templates/forgotpassword/forgotpassword.html.twig
+++ b/templates/forgotpassword/forgotpassword.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Forgot your password ?{% endblock %}
 
+{% block stylesheets %}
+    <link href="{{ asset('html/forgotpassword.css') }}" rel="stylesheet" /> 
+{% endblock %}
+
 {% block body %}
         <div class="main-wrapper">
         <!-- ============================================================== -->
@@ -21,13 +25,13 @@
         <!-- ============================================================== --> 
        <div class="auth-wrapper d-flex no-block justify-content-center align-items-center position-relative"
             style="background:url(assets/images/big/auth-bg.jpg) no-repeat center center;">
-            <div class="auth-box row text-center">
+            <div class="auth-box row text-center box">
                 <div class="col-lg-7 col-md-5 modal-bg-img style" style="">
                 </div>
                 <div class="col-lg-5 col-md-7 bg-white">
                     <div class="p-3">
                      {{ form_start(PasswordForm) }}
-                        <img src="assets/images/big/icon.png" alt="wrapkit">
+                        <img src="assets/images/big/Directe.png" alt="wrapkit">
                         <h2 class="mt-3 text-center sign-up">Change password</h2>
                         <form class="mt-4">
                             <div class="row">    
@@ -40,10 +44,8 @@
                                     <button type="submit" class="btn btn-block btn-dark" href="{{ path('app_changepassword') }}">Sign Up</button>
                                 </div>
                                 <div class="col-lg-12 text-center mt-5">
-                                   <a href="{{ path('app_login') }}" class="text-danger">Already have an account? </a>
                                 </div>
                             </div>
-                        </form>
                     </div>
                 </div>
             </div>
