--- a/templates/mark/contain_mark.html.twig
+++ b/templates/mark/contain_mark.html.twig
@@ -1,5 +1,9 @@
+ {% block stylesheets %}
+    <link href="{{ asset('html/contain_mark.css') }}" rel="stylesheet" /> 
+{% endblock %}
+ 
  <div class="container-fluid">
-    <div class="row">
+    <div class="row tableau">
         <div class="col-12">
             <div class="card">
                 <div class="card-body">
