--- a/templates/note/note.html.twig
+++ b/templates/note/note.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}add grade{% endblock %}
+{% block stylesheets %}
+    <link href="{{ asset('html/note.css') }}" rel="stylesheet" /> 
+{% endblock %}
 
 {% block body %}
     {% include "menu/sidebar_index.html.twig" %}
@@ -9,47 +12,42 @@
 <br><br><br><br>
 <div class="container">
 
-    <form class="well form-horizontal" action="" method="post"  id="contact_form">
-<fieldset>
-
 <!-- Form Name -->
-<legend>Add a grade</legend>
 
   {{ form_start(NoteForm) }}
                         <h2 class="mt-3 text-center sign-up">Add a grade</h2>
                         <form class="mt-4">
                             <div class="row">
-                                <div class="col-lg-12 username">  
+                                <div class="col-lg-12 oui ">  
                                         {{ form_row(NoteForm.nom_eleve, {
                                             'attr': {'placeholder': 'username', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
-                                <div class="col-lg-12">
+                                <div class="col-lg-12 oui">
                                         {{ form_row(NoteForm.prenom_eleve, {
                                             'attr': {'placeholder': 'surname', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
-                                <div class="col-lg-12 password">
+                                <div class="col-lg-12 oui">
                                         {{ form_row(NoteForm.nom_matiere, {
                                             'attr': {'placeholder': 'subject name', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
-                                <div class="col-lg-12">
+                                <div class="col-lg-12 oui" >
                                         {{ form_row(NoteForm.note, {
                                             'attr': {'placeholder': '', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
-                                <div class="col-lg-12"><br>
-                                    <div class="form-group">
+                                <div class="col-lg-12 coefficient"><br>
                                         {{ form_row(NoteForm.coefficient, {
+                                             'attr': {'placeholder': '', 'class': 'form-control'}, 
                                          }) }}
                                     </div>
                                 </div>
                                 <div class="col-lg-12 text-center">
-                                    <input type="submit" class="btn btn-block btn-dark" value="add">
+                                    <input type="submit" class="btn btn-block btn-dark submit" value="add">
                                 </div>
                             </div>
-                        </form>
                     </div><!-- /.container -->
       {{ form_end(NoteForm) }}
 {% endblock %}
