--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,6 @@
 
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}<legend>Beaupeyrat Institution </legend>{% endblock %}
     </body>
 </html>
