--- a/templates/index/contain.html.twig
+++ b/templates/index/contain.html.twig
@@ -1,4 +1,8 @@
   
+{% block stylesheets %}
+    <link href="{{ asset('html/contain_index.css') }}" rel="stylesheet" /> 
+{% endblock %}
+<legend>Beaupeyrat Institution </legend>
 <div class="col-md-6 col-lg-4">
     <div class="card">
          <div class="card-body">
@@ -11,9 +15,8 @@
                                             </a>
                                         </div>
                                         <div class="ml-3 mt-2">
-                                            <h5 class="text-dark font-weight-medium mb-2">New </h5>
-                                            <p class="font-14 mb-2 text-muted">John Musa just purchased <br> Cannon 5M
-                                                Camera.
+                                            <h5 class="text-dark font-weight-medium mb-2">Offre de poste pour BTS CG - à la CPAM de Guéret</h5>
+                                            <p class="font-14 mb-2 text-muted">CDD qui pourrait déboucher sur un CDI <br> Espace de travail: Campus - Offres Stages / Emplois / Ecoles
                                             </p>
                                             <span class="font-weight-light font-14 text-muted">10 Minutes Ago</span>
                                         </div>
@@ -38,9 +41,9 @@
                                             </a>
                                         </div>
                                         <div class="ml-3 mt-2">
-                                            <h5 class="text-dark font-weight-medium mb-2">Notification Pending Order!
+                                            <h5 class="text-dark font-weight-medium mb-2">Nouvelles offres de postes disponibles pour BTS CG ou DCG
                                             </h5>
-                                            <p class="font-14 mb-2 text-muted">One Pending order from Ryne <br> Doe</p>
+                                            <p class="font-14 mb-2 text-muted">- CDD à la Carsat et poste chez AEM à la Souterraine. Détails à voir dans le Cloud
                                             <span class="font-weight-light font-14 mb-1 d-block text-muted">2 Hours
                                                 Ago</span>
                                         </div>
