--- a/templates/mark/contain_mark.html.twig
+++ b/templates/mark/contain_mark.html.twig
@@ -1,17 +1,18 @@
  {% block stylesheets %}
     <link href="{{ asset('html/contain_mark.css') }}" rel="stylesheet" /> 
 {% endblock %}
- 
- <div class="container-fluid">
-    <div class="row tableau">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Notes élèves</h4>
-                    <h6 class="card-subtitle">Using the most basic table markup, here’s how</h6>
-                    {% include "post/post.html.twig" %}    
-                 </div>
-            </div>
-        </div>
-    </div>
-</div>
+     <div class="page-wrapper">
+                <div class="container-fluid">
+                    <div class="row tableau">
+                        <div class="col-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="card-title">Notes élèves</h4>
+                                    <h6 class="card-subtitle">Using the most basic table markup, here’s how</h6>
+                                    {% include "post/post.html.twig" %}    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+          </div> 
