--- a/templates/menu/sidebar_index.html.twig
+++ b/templates/menu/sidebar_index.html.twig
@@ -27,6 +27,10 @@ data-sidebar-position="fixed" data-header-position="fixed" data-boxed-layout="fu
                             </li>
                         </ul>
                     </li>
+            </nav>
+        </div>
+    </aside>            
+</div> <!-- When Tabletime be done
                     <li class="sidebar-item"> <a class="sidebar-link has-arrow" href="javascript:void(0)"
                             aria-expanded="false"><i data-feather="grid" class="feather-icon"></i><span
                                 class="hide-menu">Tabletime</span></a>
@@ -41,3 +45,4 @@ data-sidebar-position="fixed" data-header-position="fixed" data-boxed-layout="fu
         </div>
     </aside>            
 </div>
+-->
