--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -1,8 +1,10 @@
+ {% block stylesheets %}
+    <link href="{{ asset('html/post.css') }}" rel="stylesheet" /> 
+{% endblock %}
     <div class="table-responsive">
         <table class="table">
             <thead>
             </thead>
-            <h4 class="card-title">Notes élèves</h4>
             <tbody>
                 {% for note_controle in note_controles %}
                     <tr>
@@ -17,5 +19,5 @@
         </table>
     </div>
 <div class="col-lg-12 text-center mt-5">
-    <a href="{{ path('app_note') }}" class="text-danger">Ajouter une note</a>
+    <a href="{{ path('app_note') }}" class="text-danger add">Ajouter une note</a>
 </div>
