--- a/templates/mark/contain_mark.html.twig
+++ b/templates/mark/contain_mark.html.twig
@@ -1,5 +1,6 @@
  {% block stylesheets %}
     <link href="{{ asset('html/contain_mark.css') }}" rel="stylesheet" /> 
+    <link href="{{ asset('html/eleve.css') }}" rel="stylesheet" /> 
 {% endblock %}
      <div class="page-wrapper">
                 <div class="container-fluid">
@@ -8,7 +9,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h4 class="card-title">Notes élèves</h4>
-                                    <h6 class="card-subtitle">Using the most basic table markup, here’s how</h6>
+                                    <h6 class="card-subtitle"></h6>
                                     {% include "post/post.html.twig" %}    
                                 </div>
                             </div>
