--- a/templates/post/post.html.twig
+++ b/templates/post/post.html.twig
@@ -5,7 +5,13 @@
         <table class="table">
             <thead>
             </thead>
-            <tbody>
+            <tbody> 
+    
+                        <th id="t">Surname</th>
+                        <th id="t">Name</th>
+                        <th id="t">Subject</th>
+                        <th id="t">Grade</th>
+                        <th id="t">coefficient</th>
                 {% for note_controle in note_controles %}
                     <tr>
                         <td id="th1">{{ note_controle.NomEleve }}</td>
