--- a/templates/menu/navbar_index.html.twig
+++ b/templates/menu/navbar_index.html.twig
@@ -119,12 +119,6 @@
                                             </a>
                                         </div>
                                     </li>
-                                    <li>
-                                        <a class="nav-link pt-3 text-center text-dark" href="https://youtu.be/sWk9qsxEWKg">
-                                            <strong>Check all notifications</strong>
-                                            <i class="fa fa-angle-right"></i>
-                                        </a>
-                                    </li>
                                 </ul>
                             </div>
                         </li>
@@ -138,7 +132,7 @@
                                 <i data-feather="settings" class="svg-icon"></i>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Tommorow</a>
+                                <a class="dropdown-item" href="#">Tomorrow</a>
                                 <a class="dropdown-item" href="#">Maybe one day</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Never</a>
