--- a/public/html/eleve.css
+++ b/public/html/eleve.css
@@ -6,18 +6,14 @@
     width: 500px;
 }
 
-.oui{
+.previous1{
     position: absolute;
-    top: 100px;
-    left: 700px;
-    height: 300px;
-    width: 500px;
+    top: 340px;
+    left: 850px;
 }
 
-.non{
+.next1{
     position: absolute;
-    top: 100px;
-    left: 700px;
-    height: 300px;
-    width: 500px;
+    top: 340px;
+    right: 900px;
 }
