--- a/templates/forgotpassword/forgotpassword.html.twig
+++ b/templates/forgotpassword/forgotpassword.html.twig
@@ -32,13 +32,12 @@
                         {{ form_start(PasswordForm) }}
                             <img src="assets/images/big/Directe.png" alt="wrapkit">
                             <h2 class="mt-3 text-center sign-up">Change password</h2>
-                            <form class="mt-4">
-                                <div class="row">    
-                                    <div class="col-lg-12 password">
+                                <div class="row">  
+                                        <div class="col-lg-12 password">
                                             {{ form_row(PasswordForm.plainPassword, {
-                                                'attr': {'placeholder': 'password', 'class': 'form-group '}, 
+                                                'attr': {'class': 'form-group '}, 
                                             }) }}
-                                    </div>
+                                        </div>
                                         <div class="col-lg-12 text-center">
                                             <button type="submit" class="btn btn-block btn-dark" href="{{ path('app_changepassword') }}">Sign Up</button>
                                         </div>
