--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -31,21 +31,25 @@
                     {{ form_start(registrationForm) }}
                         <img src="assets/images/big/directe.png" alt="wrapkit">
                         <h2 class="mt-3 text-center sign-up">Sign Up</h2>
-                        <form class="mt-4">
                             <div class="row">
                                 <div class="col-lg-12 username">  
                                         {{ form_row(registrationForm.username, {
                                             'attr': {'placeholder': 'username', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
-                                <div class="col-lg-12">
+                                <div class="col-lg-12 surname">
                                         {{ form_row(registrationForm.surname, {
                                             'attr': {'placeholder': 'surname', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
+                                <div class="col-lg-12">  
+                                        {{ form_row(registrationForm.pseudo, {
+                                            'attr': {'placeholder': 'pseudonyme', 'class': 'form-control'}, 
+                                         }) }}
+                                </div>
                                 <div class="col-lg-12 password">
                                         {{ form_row(registrationForm.plainPassword, {
-                                            'attr': {'placeholder': 'password', 'class': 'form-control'}, 
+                                            'attr': {'class': 'form-control'}, 
                                          }) }}
                                 </div>
                                 <div class="col-lg-12">
@@ -66,27 +70,12 @@
                                     Already have an account? <a href="{{ path('app_login') }}" class="text-danger">Sign In</a>
                                 </div>
                             </div>
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
 </div>
     {{ form_end(registrationForm) }}
-     <!-- ============================================================== -->
-        <!-- Login box.scss -->
-        <!-- ============================================================== -->
-    </div>
-    <!-- ============================================================== -->
-    <!-- All Required js -->
-    <!-- ============================================================== -->
-    <script src="assets/libs/jquery/dist/jquery.min.js "></script>
-    <!-- Bootstrap tether Core JavaScript -->
-    <script src="assets/libs/popper.js/dist/umd/popper.min.js "></script>
-    <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js "></script>
-    <!-- ============================================================== -->
-    <!-- This page plugin js -->
-    <!-- ============================================================== -->
     <script>
         $(".preloader ").fadeOut();
     </script>
