--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -47,7 +47,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <label class="text-dark" for="uname">Username</label>
+                                        <label class="text-dark" for="uname">mail</label>
                                         <input class="form-control" id="uname" type="text"
                                             placeholder="enter your username" name="username">
                                     </div>
