--- a/templates/note/note.html.twig
+++ b/templates/note/note.html.twig
@@ -19,27 +19,22 @@
                         <form class="mt-4">
                             <div class="row">
                                 <div class="col-lg-12 oui ">  
-                                        {{ form_row(NoteForm.nom_eleve, {
+                                        {{ form_row(NoteForm.user.username, {
                                             'attr': {'placeholder': 'username', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
                                 <div class="col-lg-12 oui">
-                                        {{ form_row(NoteForm.prenom_eleve, {
-                                            'attr': {'placeholder': 'surname', 'class': 'form-control'}, 
-                                         }) }}
-                                </div>
-                                <div class="col-lg-12 oui">
-                                        {{ form_row(NoteForm.nom_matiere, {
+                                        {{ form_row(NoteForm.matiere.libellé, {
                                             'attr': {'placeholder': 'subject name', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
                                 <div class="col-lg-12 oui" >
-                                        {{ form_row(NoteForm.note, {
+                                        {{ form_row(NoteForm.note_controle.note, {
                                             'attr': {'placeholder': '', 'class': 'form-control'}, 
                                          }) }}
                                 </div>
                                 <div class="col-lg-12 coefficient"><br>
-                                        {{ form_row(NoteForm.coefficient, {
+                                        {{ form_row(NoteForm.note_controle.coefficient, {
                                              'attr': {'placeholder': '', 'class': 'form-control'}, 
                                          }) }}
                                     </div>
